68

67

* Use ctrl+t for tray visibility, this should move to sugar-graphics-window (erikos)
* Fix the case where no activity can be associated with the downloaded file (erikos)
* Changed icon for stop button, place alert on top (erikos)

66

* Adapt to sugar API change (marco)

65

* Removed hack to set the right service name for sharing (erikos)
* Removed the clipboard part from the download manager and added alerts (erikos)

64

63

* Fix crash on startup. (marco)
* #3552: Cancel a donwload when the related journal entry is deleted. (tomeu)

62

* #2910 Open popups in the current window (marco)
* Add agent-stylesheet.css and support for blocking flash. (tomeu)
* Add support for agent and user stylesheets. (tomeu)

61

* Adopted to the latest actviity launch changes (erikos)
* Took the import of securitydialog out (erikos)

60

* Limit to 15 entries in the palette of the back/forward buttons (erikos)
* Always start at the first toolbar page (erikos)

59

* Add several ogg subtypes (marco)

57

* Fix a typo, make mime types actually work (marco)

56

* Add more ogg mime types (marco)

55

* Backward compatibility of journal entries to trial-2 (erikos)

54

* Update spanish translation.

53

* Make hide/show of the treay one button #3475 (erikos)

52

* Fix for when participant leaves (erikos)
* #3347 Advertise ogg and wav mime types (marco)
* Added the buttons for hide/show tray (erikos)

51

* #3339 Add some mime types web-activity can handle (marco)
* Added support for the view source key fn+space (erikos)

50

* View source for Browse
  With the ctrl+u command does load the current page from the cache and 
  launches write to display it #3261 (erikos)
* Changed the show/hide frame key to be ctrl+v for visibility (erikos)
  
49

* Added missing fill_color in icon (erikos)
* #2555: Report download progress to the Journal via the DataStore. (tomeu)

48

* New activity icon, Fix for #2829 (erikos)

47
