@@ -1,4 +1,8 @@
+* Make use of the tray support in sugar activity window (erikos)
+
 68
+
+* Adopt 'go' icons (marco)
 
 67
 
